Extrai urls hardcoded

--- a/eventex/subscriptions/templates/subscriptions/subscription_detail.html
+++ b/eventex/subscriptions/templates/subscriptions/subscription_detail.html
@@ -3,7 +3,7 @@
 {% block content %}
 <section>
     <div class="content row padding-bottom-3 desktop-12 container">
-        <h1>Obrihgada por se inscrever no Eventex!</h1>
+        <h1>Obrigada por se inscrever no Eventex!</h1>
 
         <div class="desktop-6">
             <p>Estes foram os dados que você forneceu na inscrição:</p>
