--- a/eventex/subscriptions/templates/subscriptions/subscription_form.html
+++ b/eventex/subscriptions/templates/subscriptions/subscription_form.html
@@ -6,16 +6,10 @@
         <h1>Formulário de Inscrição</h1>
 
         <div class="desktop-6">
-            {% if messages %}
-                {% for message in messages %}
-                    <div class="alert success">
-                        <p>{{ message }}</p>
-                    </div>
-                {% endfor %}
-            {% endif %}
             <!-- Atribuot novalidate para pular validacao do html5 -->
             <form action="." method="post" novalidate>
                 {% csrf_token %}
+                {{ form.non_field_errors }}
                 <div class="form-row label-block input-text">
                     <label for="{{ form.name.id_for_label }}">{{ form.name.label }}</label>
                     {{ form.name.errors }}
